# Starfall-Defense

./: .gitignore  README.md  hackathon.md  index.html  package-lock.json  package.json  vercel.json  vite.config.js
contracts/game-leaderboard/: Cargo.toml
contracts/game-leaderboard/src/: lib.rs
css/: style.css
js/: app.js  audio.js  buildings.js  card-ui.js  datapoint.js  effects.js  explosion.js  game-logger.js  game.js  hud.js  loot-system.js  main.js  matrix.js  music.js  poseidon2.js  projectile.js  seeded-random.js  stellar-wallet.js  ticker.js  turret.js  zk-prover.js
zk/loot_reveal/: Nargo.toml
zk/loot_reveal/src/: main.nr
zk/oracle_defense/: Nargo.toml  Prover.toml
zk/oracle_defense/src/: main.nr
